--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -22,7 +22,11 @@ layout: default
           </a>
         </h3>
         {%- if site.show_excerpts -%}
-          {{ post.excerpt | strip_html | truncatewords: 50 }}
+          {%- if post.cn -%}
+            {{ post.excerpt | strip_html | truncate: 150, '......' }}
+          {%- else -%}
+            {{ post.excerpt | strip_html | truncatewords: 50 }}
+          {%- endif -%}
         {%- endif -%}
       </li>
       {%- endfor -%}
