--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -2,3 +2,6 @@
 <link rel="icon" type="image/png" sizes="32x32" href="{{ "/assets/icons/favicon-32x32.png" | absolute_url }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ "/assets/icons/favicon-16x16.png" | absolute_url }}">
 <link rel="manifest" href="{{ "/site.webmanifest" | absolute_url }}">
+
+<!-- Custom Font Styles -->
+<link rel="stylesheet" href="{{ '/assets/css/font.css' | relative_url }}">
